plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.6'
    id 'io.spring.dependency-management' version '1.1.6'

    // frontend
    id 'org.siouan.frontend-jdk21' version '9.1.0' apply false
}

jar.enabled = false
bootJar.enabled = false

ext {
    // dependencies version
    commonsLang3Ver = '3.14.0'
    springCloudVer = '2023.0.4'
    mybatisVer = '3.0.4'
    zxingVer = '3.5.3'
    commonsCodecVer = '1.17.0'
    vavrVer = '0.10.4'
    mybatisPlusVer = '3.5.9'
    commonsPool2Ver = '2.12.0'
    springDocVer = '2.5.0'
    commonsCollections4Ver = '4.5.0-M1'
    browscapJavaVer = '1.4.4'
    commonsIoVer = '2.16.1'
    joseJwtVer = '9.40'
    ttlVer = '2.14.5'
    dynamicDsVer = '4.3.1'
    lokiVer = "1.6.0-m1"
    httpClient4Ver = '4.5.14'
    ajCaptchaVer = '1.3.0'
    ip2RegionVer = '2.7.0'
}

allprojects {
    repositories {
        maven { url 'https://maven.aliyun.com/repository/central/' }
        maven { url 'https://maven.aliyun.com/repository/public/'}
        mavenCentral()
        maven {
            url = 'https://packages.aliyun.com/6512e2d3db8fc6072ca0c88c/maven/repo-opensrcdevelop'
            credentials {
                username = '6512e2bc3f15d5487d5296cb'
                password = System.getenv("REPO_OPENSRCDEVELOP_PASSWORD")
            }
        }
    }

    if (it.name != 'ui') {
        apply plugin: 'java'
        apply plugin: 'org.springframework.boot'
        apply plugin: 'io.spring.dependency-management'

        group = 'cn.opensrcdevelop'

        java {
            sourceCompatibility = '21'
        }

        configurations {
            compileOnly {
                extendsFrom annotationProcessor
            }
        }

        dependencies {
            implementation 'org.springframework.boot:spring-boot-starter'
            implementation "org.apache.commons:commons-lang3:$rootProject.commonsLang3Ver"
            implementation "commons-codec:commons-codec:$rootProject.commonsCodecVer"
            implementation "org.apache.commons:commons-collections4:$rootProject.commonsCollections4Ver"
            implementation "commons-io:commons-io:$rootProject.commonsIoVer"
            implementation "io.vavr:vavr:$rootProject.vavrVer"
            compileOnly 'org.projectlombok:lombok'
            annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
            annotationProcessor 'org.projectlombok:lombok'
            testImplementation 'org.springframework.boot:spring-boot-starter-test'
            testImplementation 'org.assertj:assertj-core'
            testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        }

        dependencyManagement {
            imports {
                mavenBom "org.springframework.cloud:spring-cloud-dependencies:$rootProject.springCloudVer"
            }
        }

        tasks.named('test') {
            useJUnitPlatform()
        }
    }
}
